--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Reset default browser styles */
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 body, h1, h2, h3, h4, h5, h6, p, ul, li, form, input, button {
   margin: 0;
   padding: 0;
@@ -169,3 +170,19 @@ footer {
   #logo {
     margin-right: 10px;
     }
+#vision-mission-values{
+      padding: 80px;
+    }
+
+.paraAbout {
+      font-family: 'Acme', sans-serif;
+      font-size: larger;
+      color: rgb(14, 62, 62);
+      font-weight: 800;
+ }
+ #para {
+  font-family: 'Acme', sans-serif;
+   font-size: larger;
+   color: rgb(14, 62, 62);
+   font-weight: 800;
+}
